gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__read.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 30
eol: None
diagnostics: 
-----------------
3..10     READ <ID: a$>
13..30    READ b$[<ID: i>, <ID: j>], <ID: c>, <ID: d%>

