gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__real_world_example.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(17)))
len: 73
eol: None
diagnostics: 
-----------------
3..13     LOCATE <NUM: 3>, <NUM: 2>
14..26    PRINT <STR: "A"> ; , <NUM: 3> 
27..52    LOCATE <NUM: 3>, (<NUM: 18> - LEN(STR$(<ID: ET>)))
53..61    PRINT <ID: ET> 
62..73    DRAW <NUM: 100>, <NUM: 38>

