gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__swap.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 17
eol: None
diagnostics: 
-----------------
3..17     SWAP a$[<ID: i>], <ID: b c>

