gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__write.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 60
eol: None
diagnostics: 
-----------------
3..29     WRITE a$[(<ID: i> + (<ID: j> * <NUM: 10>))], <ID: b> FN f(<ID: x>) 
30..60    WRITE # (<NUM: 3> - <ID: a>), ASC(<ID: a>) (<ID: x> + <NUM: 2>) (<ID: x> * <NUM: 6>), <ID: o$>, 

